examples/invalid/invalidif.mcl

void main() {
    if if ("entity @p") {
        /say Hello!
    }
}